--- a/package.json
+++ b/package.json
@@ -7,19 +7,27 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently \"npm run dev\" \"npm run dev:backend\"",
+    "dev:backend": "cd server && npm run dev",
+    "dev:db": "podman compose up -d",
+    "dev:all": "npm run dev:db && timeout /t 3 /nobreak >nul 2>&1 & npm run start"
   },
   "dependencies": {
     "@mantine/core": "^7.15.0",
+    "@mantine/form": "^7.15.0",
     "@mantine/hooks": "^7.15.0",
+    "@mantine/notifications": "^7.15.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
