--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mantine/core": "^7.15.0",
     "@mantine/form": "^7.15.0",
     "@mantine/hooks": "^7.15.0",
+    "@mantine/modals": "^7.15.0",
     "@mantine/notifications": "^7.15.0",
+    "@tabler/icons-react": "^3.36.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.1.3"
