--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "pg": "^8.13.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "gigachat": "^1.0.0"
   }
 }
