--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "gigachat": "^0.0.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.1.3"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^7.1.3",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
